--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -44,10 +44,25 @@
         </svg>
       </div>
       <div class="groupListBody">
-        <div class="groupListItem">
-          <div class="groupNum">1</div>
-          <div class="groupName">출퇴근</div>
+        {% for group in group_list %}
+        <div class="groupListItem {{group.id}}" draggable="true">
+          <div class="groupNum">
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16.5" viewBox="0 0 22 16.5">
+              <path id="Icon_awesome-folder" data-name="Icon awesome-folder"
+                d="M19.938,7.25h-8.25L8.938,4.5H2.063A2.062,2.062,0,0,0,0,6.563V18.938A2.062,2.062,0,0,0,2.063,21H19.938A2.062,2.062,0,0,0,22,18.938V9.313A2.062,2.062,0,0,0,19.938,7.25Z"
+                transform="translate(0 -4.5)" fill="#444" />
+            </svg>
+          </div>
+          <div class="groupName">{{group.name}}</div>
+          <div class="groupFixe">
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22.035" viewBox="0 0 22 22.035">
+              <path id="Icon_zocial-pinboard" data-name="Icon zocial-pinboard"
+                d="M23.332,7.159c-1.584-1.435-5.671-5.681-7.181-7.34s0,2.795,0,2.795L9.312,8.909s-4.855-1.8-4.249-1.045S9.494,12.59,9.494,12.59s-8.136,8.627-7.834,8.888S10.7,13.636,10.7,13.636,14.46,17.538,14.97,18s-.682-3.84-.682-3.84l5.794-7.181S24.916,8.595,23.332,7.159Z"
+                transform="translate(-1.651 0.55)" fill="#dededf" />
+            </svg>
+          </div>
         </div>
+        {% endfor %}
       </div>
     </div>
 
@@ -55,7 +70,6 @@
       <div class="groupCreateHead">그룹등록</div>
       <div class="groupCreateBody">
         <div class="groupCreateInput">
-          <input type="text" placeholder="순번" class="groupNumCreate">
           <input type="text" placeholder="그룹이름" class="groupNameCreate">
         </div>
         <div class="groupCreateBtnBox">
@@ -97,66 +111,63 @@
 
     {% if request.get_full_path != '/dispatch/regularly/route' %}
     <form action="{% url 'dispatch:regularly_route_create' %}" method="post" class="routeInput">
-    {% else %}
-    <form action="{% url 'dispatch:regularly_route_create' %}" method="post" class="routeInput">
-    {% endif %}
-      {% csrf_token %}
-      <div class="routeInputHead">
-        <span>노선등록</span>
-        <div class="routeInputBtnBox">
-          <a href="{% url 'dispatch:regularly_route' %}">
-            <div class="btnModules routeInputNew">신규</div>
-          </a>
-          <input type="submit" class="btnModules routeInputSave" value="저장">
-          <div class="btnModules routeInputDelete" onclick="routeInputDeleteUrl()">삭제</div>
+      {% else %}
+      <form action="{% url 'dispatch:regularly_route_create' %}" method="post" class="routeInput">
+        {% endif %}
+        {% csrf_token %}
+        <div class="routeInputHead">
+          <span>노선등록</span>
+          <div class="routeInputBtnBox">
+            <a href="{% url 'dispatch:regularly_route' %}">
+              <div class="btnModules routeInputNew">신규</div>
+            </a>
+            <input type="submit" class="btnModules routeInputSave" value="저장">
+            <div class="btnModules routeInputDelete" onclick="routeInputDeleteUrl()">삭제</div>
+          </div>
         </div>
-      </div>
 
-      <table class="dispatcTable">
-        <colgroup>
-          <col style="width: 7%;">
-          <col style="width: 18%;">
-          <col style="width: 7%;">
-          <col style="width: 18%;">
-          <col style="width: 7%;">
-          <col style="width: 18%;">
-          <col style="width: 7%;">
-          <col style="width: 18%;">
-        </colgroup>
-        <tr>
-          <td class="tdTypeA">그룹</td>
-          <td colspan="3" class="tdTypeB">
-            <select name="group" class="inputSelect">
-              {% for g in group_list %}
-              <option value="{{g.id}}">{{g.name}}</option>
-              {% endfor %}
-            </select>
-          </td>
-          <td class="tdTypeA">출/퇴근</td>
-          <td class="tdTypeC">
-            <input name="work_type" id="workStart" type="radio">
-            <label for="workStart">출근</label>
-            <input name="work_type" id="workEnd" type="radio">
-            <label for="workEnd">퇴근</label>
-          </td>
-          <td class="tdTypeA">위치</td>
-          <td class="tdTypeC">
-            <input value="" type="text" class="inputText">
-          </td>
-        </tr>
-        <tr>
-          <td class="tdTypeA">출발지</td>
-          <td colspan="3" class="tdTypeB">
-            <input name="departure" type="text" class="inputText">
-          </td>
-          <td class="tdTypeA">운행요일</td>
-          <td colspan="3" class="tdTypeB">
-            <div class="routeWeek">
-              <div>
+        <table class="dispatcTable">
+          <colgroup>
+            <col style="width: 7%;">
+            <col style="width: 18%;">
+            <col style="width: 7%;">
+            <col style="width: 18%;">
+            <col style="width: 7%;">
+            <col style="width: 18%;">
+            <col style="width: 7%;">
+            <col style="width: 18%;">
+          </colgroup>
+          <tr>
+            <td class="tdTypeA">그룹</td>
+            <td colspan="3" class="tdTypeB">
+              <select name="group" class="inputSelect">
+                {% for g in group_list %}
+                <option value="{{g.id}}">{{g.name}}</option>
+                {% endfor %}
+              </select>
+            </td>
+            <td class="tdTypeA">출/퇴근</td>
+            <td class="tdTypeC">
+              <input name="work_type" id="workStart" type="radio">
+              <label for="workStart">출근</label>
+              <input name="work_type" id="workEnd" type="radio">
+              <label for="workEnd">퇴근</label>
+            </td>
+            <td class="tdTypeA">위치</td>
+            <td class="tdTypeC">
+              <input name="location" value="" type="text" class="inputText">
+            </td>
+          </tr>
+          <tr>
+            <td class="tdTypeA">노선명</td>
+            <td colspan="3" class="tdTypeB">
+              <input name="" type="text" class="inputText">
+            </td>
+            <td class="tdTypeA">운행요일</td>
+            <td colspan="3" class="tdTypeB">
+              <div class="routeWeek driveDateBox">
                 <input id="all" type="checkbox">
                 <label for="all">모두</label>
-              </div>
-              <div>
                 <input name="week" value="월" id="mon" type="checkbox">
                 <label for="mon">월</label>
                 <input name="week" value="화" id="tue" type="checkbox">
@@ -172,99 +183,117 @@
                 <input name="week" value="일" id="sun" type="checkbox">
                 <label for="sun">일</label>
               </div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td class="tdTypeA">도착지</td>
-          <td colspan="3" class="tdTypeB">
-            <input name="arrival" type="text" class="inputText">
-          </td>
-          <td class="tdTypeA">금액</td>
-          <td class="tdTypeC">
-            <input name="price" type="text" class="inputText">
-          </td>
-          <td class="tdTypeA">수당단가</td>
-          <td class="tdTypeC">
-            <input name="driver_allowance" type="text" class="inputText">
-          </td>
-        </tr>
-        <tr>
-          <td class="tdTypeA">순번</td>
-          <td class="tdTypeC">
-            <div class="routeNumber">
-              <input name="number1" type="text" class="inputText">-
-              <input name="number2" type="text" class="inputText">
-            </div>
-          </td>
-          <td class="tdTypeA">운행시간</td>
-          <td class="tdTypeC">
-            <div class="routeTime">
-              <input name="departure_time1" type="text" class="inputText">:
-              <input name="departure_time2" type="text" class="inputText">~
-              <input name="arrival_time1" type="text" class="inputText">:
-              <input name="arrival_time2" type="text" class="inputText">
-            </div>
-          </td>
-          <td class="tdTypeA">참조사항</td>
-          <td colspan="3" class="tdTypeB">
-            <input name="references" type="text" class="inputText">
-          </td>
-        </tr>
-      </table>
-
-    </form>
-
-
-
-
-    <form class="routListSearch">
-      <label for="routeListsearch">노선검색</label>
-      <input type="text" id="routeListsearch">
-      <input type="submit" class="btnModules routeListSearchBtn" value="검색">
-    </form>
-
-
-
-
-    <div class="RouteList">
-
-      <table class="RouteListHeader">
-        <thead>
-          <tr>
-            <td>순번</td>
-            <td>노선이름</td>
-            <td>요일</td>
-            <td>운행타입</td>
-            <td>운행시간</td>
-            <td>위치</td>
-            <td>수당단가</td>
-            <td>금액</td>
-            <td>참조사항</td>
+            </td>
           </tr>
-        </thead>
-      </table>
-
-      <div class="RouteListScroll">
-        <table class="RouteListBody">
-          <tbody>
-            <tr class="RouteListBodyTr">
-              <td>셔틀-22</td>
-              <td></td>
-              <td>월화수목금토일</td>
-              <td>출근</td>
-              <td>08:05 ~ 11:20</td>
-              <td></td>
-              <td>1,000,000</td>
-              <td>1,000,000</td>
-              <td></td>
-            </tr>
-            <tr class="blanckTr"></tr>
-          </tbody>
+          <tr>
+            <td class="tdTypeA">출발지</td>
+            <td colspan="3" class="tdTypeB">
+              <input name="departure" type="text" class="inputText">
+            </td>
+            <td class="tdTypeA">상세노선</td>
+            <td colspan="3" class="tdTypeB">
+              <input name="" type="text" class="inputText">
+            </td>
+          </tr>
+          <tr>
+            <td class="tdTypeA">도착지</td>
+            <td colspan="3" class="tdTypeB">
+              <input name="arrival" type="text" class="inputText">
+            </td>
+            <td class="tdTypeA">금액</td>
+            <td class="tdTypeC">
+              <input name="price" type="text" class="inputText">
+            </td>
+            <td class="tdTypeA">기사수당</td>
+            <td class="tdTypeC">
+              <input name="driver_allowance" type="text" class="inputText">
+            </td>
+          </tr>
+          <tr>
+            <td class="tdTypeA">순번</td>
+            <td class="tdTypeC">
+              <div class="routeNumber">
+                <input name="number1" type="text" class="inputText">-
+                <input name="number2" type="text" class="inputText">
+              </div>
+            </td>
+            <td class="tdTypeA">운행시간</td>
+            <td class="tdTypeC">
+              <div class="routeTime">
+                <input name="departure_time1" type="text" class="inputText">:
+                <input name="departure_time2" type="text" class="inputText">~
+                <input name="arrival_time1" type="text" class="inputText">:
+                <input name="arrival_time2" type="text" class="inputText">
+              </div>
+            </td>
+            <td class="tdTypeA">참조사항</td>
+            <td colspan="3" class="tdTypeB">
+              <input name="references" type="text" class="inputText">
+            </td>
+          </tr>
         </table>
-      </div>
 
-    </div>
+      </form>
+
+
+
+
+      <form class="routListSearch">
+        <label for="routeListsearch">노선검색</label>
+        <input type="text" id="routeListsearch">
+        <input type="submit" class="btnModules routeListSearchBtn" value="검색">
+        <div class="btnModules excelUpload">엑셀 업로드</div>
+      </form>
+
+
+
+
+      <div class="RouteList">
+
+        <div class="RouteListHeadScroll">
+          <table class="RouteListHeader">
+            <thead>
+              <tr>
+                <td>순번</td>
+                <td>노선명</td>
+                <td>노선</td>
+                <td>요일</td>
+                <td>출/퇴근</td>
+                <td>운행시간</td>
+                <td>위치</td>
+                <td>기사수당</td>
+                <td>금액</td>
+                <td>상세노선</td>
+                <td>참조사항</td>
+              </tr>
+            </thead>
+          </table>
+        </div>
+
+        <div class="RouteListScroll">
+          <table class="RouteListBody">
+            <tbody>
+              {% for order in order_list %}
+              <tr class="RouteListBodyTr">
+                <td>{{order.number1}}{% if order.number2 %} - {{order.number2}} {% endif %}</td>
+                <td>{{order.route}}</td>
+                <td>{{order.departure}} ▶ <br> {{order.arrival}}</td>
+                <td>{{order.week}}</td>
+                <td>{{order.work_type}}</td>
+                <td>{{order.departure_time}} ~ {{order.arrival_time}}</td>
+                <td>{{order.location}}</td>
+                <td>{{order.driver_allowance}}</td>
+                <td>{{order.price}}</td>
+                <td>{{order.detailed_route}}</td>
+                <td>{{order.references}}</td>
+              </tr>
+              {% endfor %}
+              <tr class="blanckTr"></tr>
+            </tbody>
+          </table>
+        </div>
+
+      </div>
 
   </div>
 
@@ -644,21 +673,24 @@
 
   function groupCreateDeleteUrl() {
     groupCreateChangeForm.action =
-    groupCreateChangeForm.submit()
+      groupCreateChangeForm.submit()
   }
 
   const routeInputChangeForm = document.querySelector(".routeInput")
 
   function routeInputDeleteUrl() {
     routeInputChangeForm.action =
-    routeInputChangeForm.submit()
+      routeInputChangeForm.submit()
   }
 
 </script>
-<script src="{% static 'js/dispatch/routeLayoutChanger.js' %}"></script>
+<script src="{% static 'js/dispatch/regularly_route/routeLayoutChanger.js' %}"></script>
+<script src="{% static 'js/dispatch/regularly_route/routeScrollLink.js' %}"></script>
+<script src="{% static 'js/dispatch/regularly_route/groupOrderChange.js' %}"></script>
+<script src="{% static 'js/dispatch/regularly_route/checker.js' %}"></script>
+<script src="{% static 'js/dispatch/regularly_route/routeListValidation.js' %}"></script>
 <!--<script src="{% static 'js/dispatch/group.js' %}"></script>
 <script src="{% static 'js/dispatch/fixedDispatch.js' %}"></script>
 <script src="{% static 'js/dispatch/scheduleFilter.js' %}"></script>
-<script src="{% static 'js/dispatch/checker.js' %}"></script>
 <script src="{% static 'js/dispatch/input.js' %}"></script> -->
 {% endblock %}
