--- a/document/templates/document/company.html
+++ b/document/templates/document/company.html
@@ -23,9 +23,9 @@
 <div class="searchAreaBox">
     <form action="">
         <div class="searchTool">
-            <div class="searchTitle">파일검색</div>
+            <!-- <div class="searchTitle">파일검색</div> -->
             <label for="">파일이름</label>
-            <input name="filename" type="text">
+            <input value="{{search}}" name="filename" type="text">
             <input type="submit" value="검색" class="btnModules">
         </div>
     </form>
@@ -38,6 +38,7 @@
 <form method="post" action="{% url 'document:company_delete' %}" class="contentsAreaBox">
     {% csrf_token %}
     <input type="submit" class="btnModules contentsAreaBoxDelete" value="삭제">
+    <div class="btnModules print">인쇄</div>
     <div class="btnModules download">다운로드</div>
     <div class="documentTableBox">
         <table class="documentTableHeader">
@@ -55,7 +56,9 @@
         <div class="documentTableBodyBox">
             <table class="documentCoverTable">
                 <tbody>
+                    
                     {% for group in group_list %}
+                    
                     <tr>
                         <td>
                             <table class="documentContentsTable">
@@ -65,29 +68,82 @@
                                             <input value="{{group.id}}" name="group_check" type="checkbox"
                                                 class="groupCheck group{{group.id}}"><!-- 장고로 클래스 부여 -->
                                         </td>
-                                        <td colspan="4">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20"
-                                                viewBox="0 0 22 20">
-                                                <g id="그룹_1649" data-name="그룹 1649" transform="translate(18803 -3628)">
-                                                    <rect id="사각형_11733" data-name="사각형 11733" width="22" height="20"
-                                                        transform="translate(-18803 3628)" fill="rgba(255,255,255,0)" />
+                                        <td colspan="2">
+                                            <div class="folderBox">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16.5"
+                                                    viewBox="0 0 22 16.5">
                                                     <path id="Icon_awesome-folder" data-name="Icon awesome-folder"
                                                         d="M19.938,7.25h-8.25L8.938,4.5H2.063A2.062,2.062,0,0,0,0,6.563V18.938A2.062,2.062,0,0,0,2.063,21H19.938A2.062,2.062,0,0,0,22,18.938V9.313A2.062,2.062,0,0,0,19.938,7.25Z"
-                                                        transform="translate(-18803 3627)" fill="#444" />
-                                                </g>
-                                            </svg>
-                                            <div>
-                                                {{group.name}}
+                                                        transform="translate(0 -4.5)" fill="#444" />
+                                                </svg>
+                                                <div>
+                                                    <input name="name" type="text" value="{{group.name}}" class="groupName" tabindex="-1" disabled>
+                                                </div>
+                                                <div class="groupNameEditBtn">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15.12" viewBox="0 0 15 15.12">
+                                                        <g id="그룹_1652" data-name="그룹 1652" transform="translate(-683.5 -772.38)">
+                                                          <g id="Icon_feather-edit" data-name="Icon feather-edit" transform="translate(684 773)">
+                                                            <path id="패스_339" data-name="패스 339" d="M9.262,6H4.392A1.392,1.392,0,0,0,3,7.392v9.741a1.392,1.392,0,0,0,1.392,1.392h9.741a1.392,1.392,0,0,0,1.392-1.392v-4.87" transform="translate(-3 -4.524)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
+                                                            <path id="패스_340" data-name="패스 340" d="M19.306,3.25a1.476,1.476,0,0,1,2.087,2.087l-6.61,6.61-2.783.7.7-2.783Z" transform="translate(-7.825 -2.818)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
+                                                          </g>
+                                                        </g>
+                                                      </svg>                                                      
+                                                </div>
+                                                <div class="btnModules groupNameSaveBtn">저장</div>
+                                                <div class="groupNameDeleteBtn">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15"
+                                                        viewBox="0 0 15 15">
+                                                        <g id="그룹_1649" data-name="그룹 1649"
+                                                            transform="translate(-438 -432)">
+                                                            <g id="사각형_11733" data-name="사각형 11733"
+                                                                transform="translate(438 432)" fill="none" stroke="#444"
+                                                                stroke-width="1">
+                                                                <rect width="15" height="15" rx="2" stroke="none" />
+                                                                <rect x="0.5" y="0.5" width="14" height="14" rx="1.5"
+                                                                    fill="none" />
+                                                            </g>
+                                                            <path id="패스_337" data-name="패스 337"
+                                                                d="M25.935,13.5,18,21.114"
+                                                                transform="translate(423.533 422.193)" fill="none"
+                                                                stroke="#444" stroke-linecap="round"
+                                                                stroke-linejoin="round" stroke-width="1" />
+                                                            <path id="패스_338" data-name="패스 338"
+                                                                d="M18,13.5l7.935,7.614"
+                                                                transform="translate(423.533 422.193)" fill="none"
+                                                                stroke="#444" stroke-linecap="round"
+                                                                stroke-linejoin="round" stroke-width="1" />
+                                                        </g>
+                                                    </svg>
+                                                </div>
+
                                             </div>
                                         </td>
+                                        <td></td>
+                                        <td></td>
                                     </tr>
                                 </thead>
                                 <tbody class="documentContentsTableTbody">
+                                    {% if file_list %}
+                                    {% for file in file_list %}
+                                    {% if file.group_id == group %}
+                                    <tr>
+                                        <td>
+                                            <input value="{{file.id}}" name="file_check" type="checkbox"
+                                                class="fileCheck group{{group.id}} {% url 'document:company_document_download' file.id %}">
+                                            <!-- 장고로 클래스 부여 -->
+                                        </td>
+                                        <td colspan="2">{{file.filename}}</td>
+                                        <td>관리자</td>
+                                        <td>2022.09.15</td>
+                                    </tr>
+                                    {% endif %}
+                                    {% endfor %}
+                                    {% else %}
                                     {% for file in group.group_file.all %}
                                     <tr>
                                         <td>
                                             <input value="{{file.id}}" name="file_check" type="checkbox"
-                                                class="fileCheck group{{group.id}} /media/{{file.file}}">
+                                                class="fileCheck group{{group.id}} {% url 'document:company_document_download' file.id %}">
                                             <!-- 장고로 클래스 부여 -->
                                         </td>
                                         <td colspan="2">{{file.filename}}</td>
@@ -95,6 +151,7 @@
                                         <td>2022.09.15</td>
                                     </tr>
                                     {% endfor %}
+                                    {% endif %}
                                     <tr>
                                         <td colspan="6">
                                             <div class="uploadFile">
@@ -142,6 +199,7 @@
             </div>
         </div>
     </div>
+    <input type="hidden" name="id" class="hiddenGroupId">
 
 </form>
 
@@ -187,7 +245,7 @@
                         </svg>
                     </div>
                 </div>
-                <input name="group_id" type="hidden" class="hiddenGroupId">
+                <input name="group_id" type="hidden" class="hiddenGroupIdUpload">
             </div>
             <div class="popupFooter">
                 <input type="submit" class="btnModules" value="추가">
@@ -227,8 +285,9 @@
 
 {% block script %}
 <script src="{% static 'js/document/download.js' %}"></script>
+<script src="{% static 'js/document/print.js' %}"></script>
 <script src="{% static 'js/document/uploadPopup.js' %}"></script>
 <script src="{% static 'js/document/gruopChecker.js' %}"></script>
 <script src="{% static 'js/document/openGroup.js' %}"></script>
-<!-- {% url 'document:company_group_delete' %} -->
+<script src="{% static 'js/document/editGroupName.js' %}"></script>
 {% endblock %}
