--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,7 +18,7 @@ body {
   background-color: #F5F5F5;
 }
 
-table{
+table {
   border-spacing: 0;
 }
 
@@ -126,7 +126,8 @@ html::-webkit-scrollbar-track {
   font-size: 1.6rem;
   color: white;
 }
-.nav1BoxMenu img{
+
+.nav1BoxMenu img {
   width: 1.7rem;
 }
 
@@ -709,7 +710,7 @@ html::-webkit-scrollbar-track {
   box-sizing: border-box;
 }
 
-.popupBodyDispatch{
+.popupBodyDispatch {
   min-height: 24rem;
   border-left: 0.1rem solid black;
   border-right: 0.1rem solid black;
@@ -773,8 +774,8 @@ html::-webkit-scrollbar-track {
 }
 
 .popupFooter {
-  position: relative;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
   width: 100%;
   height: 7.2rem;
@@ -782,21 +783,14 @@ html::-webkit-scrollbar-track {
   box-sizing: border-box;
 }
 
-.popupFooter .btnModules {
-  position: absolute;
-  top: 50%;
-}
-
 .popupFooter input {
-  left: 50%;
   background-color: #0069D9;
-  transform: translate(-50%, -50%);
+  margin-right: 1rem;
 }
 
 .popupFooter .closeBtn {
-  right: 0;
+  position: static;
   background-color: #444;
-  transform: translate(0, -50%);
 }
 
 /* popupDouble */
@@ -921,13 +915,13 @@ html::-webkit-scrollbar-track {
 
 
 @media all and (min-width:1460px) and (max-width: 1600px) {
-  html{
+  html {
     font-size: 52%;
   }
 }
 
 @media all and (min-width:1024px) and (max-width: 1460px) {
-  html{
+  html {
     font-size: 46.8%;
   }
 }
