--- a/static/css/document/company.css
+++ b/static/css/document/company.css
@@ -54,9 +54,15 @@
 }
 
 .download {
+    position: absolute;
     top: -6.5rem;
     right: 9.5rem;
+    background-color: #0069D9;
+}
+.print {
     position: absolute;
+    top: -6.5rem;
+    right: 17rem;
     background-color: #0069D9;
 }
 
@@ -161,14 +167,78 @@
 
 .documentContentsTable thead td:nth-child(2) {
     text-align: left;
-    width: 94%;
+    width: 80%;
     padding-left: 1rem;
     box-sizing: border-box;
-    line-height: -0.6rem;
+}
+
+.folderBox{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.folderBox div:nth-child(2){
+    margin-left: 1rem;
+    margin-right: 3rem;
+}
+
+.folderBox div:nth-last-child(1){
+    position: absolute;
+    top: 50%;
+    right: 2rem;
+    transform: translate(0, -50%);
+}
+
+.groupName{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    pointer-events: none;
+}
+
+.editGroupName{
+    width: 52rem;
+    height: 2.4rem;
+    padding-left: 0.3rem;
+    border: 0.1rem solid #B5B5B5;
+    border-radius: 0.2rem;
+    font-size: 1.5rem;
+    box-sizing: border-box;
+    outline: none;
+    background-color: white;
+    cursor: text;
+    pointer-events: auto;
+}
+
+.groupNameEditBtn{
+    position: absolute;
+    top: 50%;
+    right: 5rem;
+    transform: translate(0, -50%);
+}
+
+.groupNameSaveBtn{
+    position: absolute;
+    top: 50%;
+    right: 5rem;
+    display: none;
+    background-color: #0069D9;
+    transform: translate(0, -50%);
 }
 
 .documentContentsTableTbody {
     display: none;
+}
+
+
+.documentContentsTableTbody td:nth-child(2) {
+    cursor: pointer;
 }
 
 .openFolder {
@@ -179,6 +249,15 @@
     width: 100%;
     height: 3.6rem;
     background-color: white;
+}
+
+.documentContentsTable thead td:nth-child(3) {
+    text-align: center;
+    width: 7%;
+}
+.documentContentsTable thead td:nth-child(10) {
+    text-align: center;
+    width: 10%;
 }
 
 .documentContentsTable tbody td {
@@ -195,7 +274,7 @@
 .documentContentsTable tbody td:nth-child(2) {
     text-align: left;
     padding-left: 4rem;
-    width: 77%;
+    width: 80%;
     box-sizing: border-box;
 }
 
@@ -253,7 +332,5 @@
 }
 
 .popupFooter div{
-    transform: translate(0, -50%);
-    right: 0;
     background-color: #444444;
 }
