--- a/static/css/vehicle/list.css
+++ b/static/css/vehicle/list.css
@@ -170,9 +170,8 @@ td:nth-child(10) {
 }
 
 .editBtn{
-    left: 50%;
     background-color: #0069D9;
-    transform: translate(-50%, -50%);
+    margin-right: 1rem;
 }
 
 .blanckTr{
